# orx-meta

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: queue_build.rs  queue_draw_10.rs  queue_draw_100.rs  queue_draw_200.rs
benches/queue_draw_helpers/: enum_components.rs  enum_components_10.json  enum_components_200.json  enum_screen.rs  mod.rs  st_queue_components.rs  st_queue_screen.rs  trait_objects_components.rs  trait_objects_components_100.json  trait_objects_screen.rs
docs/: 1_collection_of_anything.md  2_generic_builder.md  3_composition_idea.md  3_composition_ideation.md  3_recap_for_composition.md  4_problem_with_type_system.md  5_solution_with_macros.md  6_Summary.md  6_summary.md
examples/: 1_collection_of_anything.md  1_collection_of_anything.rs  2_builder_for_complex_types.rs  2_generic_builder.rs  3_b_composition_ideation_reduction.rs  3_composition_idea.rs  3_composition_ideation.rs  3_draw_shapes.rs  3_recap_for_composition.rs  4_sum_of_any_numbers.rs  5_solution_with_macros.rs  collection_of_anything.rs  criteria.rs  draw_shapes.rs  queue_any.rs  queue_basic.rs  queue_bounded_addition.rs  queue_bounded_display.rs  queue_nested_pattern.rs  queue_shapes.rs  shapes.rs
examples/screen/: components.rs  enum_components.rs  enum_screen.rs  main.rs  screen_as_st_queue.rs  st_queue_components.rs  st_queue_screen.rs  trait_objects_components.json  trait_objects_components.rs  trait_objects_screen.rs
src/: builder.rs  composition.rs  data_composer.rs  empty.rs  lib.rs  meta_queue.rs  multi.rs  never.rs  one.rs  test_builder.rs  try_sth.rs  try_sth_lt.rs  trythis.rs  trythis_again.rs  trythis_manual.rs  tuple_composer.rs
src/arch/: composition.rs
src/arch2/: composable.rs  composition.rs  lib.rs  never.rs  play_around.rs
src/archive_queue/: empty.rs  non_empty.rs  st_queue.rs
src/composition/: meta.rs  meta_composition.rs  mod.rs  trait.rs
src/data_queue/: empty.rs  mod.rs  multi.rs  one.rs  pair.rs  queue.rs  single.rs
src/list/: list.rs  mod.rs
src/meta_queue/: composition.rs  empty.rs  mod.rs  pair.rs  queue.rs  single.rs
src/non_empty_queue/: mod.rs  multi.rs  single.rs  st_queue.rs
src/nonempty_queue/: builder.rs  define_queue.rs  mod.rs  multi.rs  queue_of.rs  (+2 more)
(+180 files in other folders)
