[package]
name = "orx-meta"
version = "1.0.1"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
readme = "README.md"
description = "Meta structures such as statically typed queues of heterogeneous elements."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-meta/"
keywords = ["queue", "meta", "polymorphism", "type", "recursive"]
categories = ["data-structures", "rust-patterns", "no-std"]

[dependencies]
