[package]
name = "orx-meta"
version = "1.0.1"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
readme = "README.md"
description = "Meta structures such as statically typed queues of heterogeneous elements."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-meta/"
keywords = ["queue", "meta", "polymorphism", "type", "recursive"]
categories = ["data-structures", "rust-patterns", "no-std"]

[dependencies]
repeated = { version = "0.1.2", registry = "artifactory" }
repetitive = { version = "0.3.2", registry = "artifactory" }

[dev-dependencies]
criterion = "0.7.0"
rand = "0.9.2"
rand_chacha = "0.9"
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.140", default-features = false, features = [
    "std",
] }

[[bench]]
name = "queue_build"
harness = false
